sass/main.scss
.navbar-header {
  .navbar-subbrand {
    font-size: 15px;
  }
}

@import "filters";

.umpr-summary {
  .status-badge-success {
    /* merge of bootstrap's .btn .btn-success */

    color: #FFF;
    background-color: #5CB85C;
    border-color: #4CAE4C;

    display: inline-block;
    padding: 6px 12px;
    margin-bottom: 0;
    font-size: 14px;
    font-weight: normal;
    line-height: 1.42857;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    -moz-user-select: none;
    border-radius: 4px;

  }

  .status-badge {
    width: 80%;
    min-width: 120px;

    .glyphicon:nth-of-type(1) {
      margin-right: 5px;
      padding-left: 5px;
    }

    .glyphicon:nth-of-type(2) {
      padding-left: 5px;
    }
  }

  .status-badge[aria-expanded=false] .collapse-direction:before {
    content: "";
  }

  .status-badge[aria-expanded=true] .collapse-direction:before {
    content: "";
  }

  .col-state-info {
    text-align: center;
  }

  .col-umple-online {
    width: 60px;
  }

  .info-error {
    margin: 0;
    padding: 0;

    pre {
      margin: 10px;
    }
  }
}

